--- a/WebContent/eddie/apps/dashboard/components/dashboard/availapps/availapps.css
+++ b/WebContent/eddie/apps/dashboard/components/dashboard/availapps/availapps.css
@@ -14,15 +14,15 @@
 }
 
 .availappsubmit:hover {
-  	opacity: 0.7;
+  	background-color: #cccccc;
 }
 
 .availappsubmit {
   	color:#000000;
   	border-radius: 6px;
-  	background-color: #eee;
+  	background-color: #ffffff;
   	font-size:10pt;
-  	width:100px;
+  	width:70px;
 	top: 5%;
 	bottom: 5%;
 	text-align: center;
