added services tab
So we can also kill the old /springfield/ pages that use direct calls
to smithers and use old calls. Not 100% done yet. need one more day of
work.

--- a/WebContent/eddie/apps/dashboard/components/dashboard/explorer/explorerdetails/explorerdetails.css
+++ b/WebContent/eddie/apps/dashboard/components/dashboard/explorer/explorerdetails/explorerdetails.css
@@ -14,11 +14,17 @@
 	visibility: hidden;
 }
 
-.explorerdetailsdelete {
+
+#exploredummybutton {
 	opacity:0;
 }
 
-.explorerdetailsdelete:hover {
+
+.explorerpropertydelete {
+	opacity:0;
+}
+
+.explorerpropertydelete:hover {
 	opacity:1;
 }
 
